--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="ios">
 
 <head>
   <meta charset="utf-8" />
@@ -19,7 +19,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body class="dark">
   <app-root></app-root>
 </body>
 
