--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Ionic App</title>
 
-  <base href="/">
+  <base href="https://sefasaid.github.io/set-tracker/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -21,6 +21,6 @@
 
 <body class="dark" mode="ios">
   <app-root></app-root>
-<script src="runtime.72480436591e6b47.js" type="module"></script><script src="polyfills.43d4f2a60900e049.js" type="module"></script><script src="main.cd60419a9fdae987.js" type="module"></script></body>
+<script src="runtime.6c529dc7e08a9c8b.js" type="module"></script><script src="polyfills.43d4f2a60900e049.js" type="module"></script><script src="main.cd60419a9fdae987.js" type="module"></script></body>
 
 </html>
