--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Ionic App</title>
 
-  <base href="https://sefasaid.github.io/set-tracker/">
+  <base href="/set-tracker/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -21,6 +21,6 @@
 
 <body class="dark" mode="ios">
   <app-root></app-root>
-<script src="https://sefasaid.github.io/set-tracker/runtime.531435b3a596d4dd.js" type="module"></script><script src="https://sefasaid.github.io/set-tracker/polyfills.43d4f2a60900e049.js" type="module"></script><script src="https://sefasaid.github.io/set-tracker/main.cd60419a9fdae987.js" type="module"></script></body>
+<script src="https://sefasaid.github.io/set-tracker/runtime.8661deb97577f797.js" type="module"></script><script src="https://sefasaid.github.io/set-tracker/polyfills.43d4f2a60900e049.js" type="module"></script><script src="https://sefasaid.github.io/set-tracker/main.cd60419a9fdae987.js" type="module"></script></body>
 
 </html>
